--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "simple todo app with a node api and react ustilizing typescript, mongodb, redux, and jest testing",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "build": "tsc",
     "start": "concurrently \"tsc -w\" \"nodemon dist/js/app.js\"",
@@ -23,6 +23,7 @@
   "author": "Ethan Bettenga",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.9",
